# filesentry

./: Cargo.toml  README.md
examples/: cli.rs
src/: config.rs  events.rs  inotify.rs  lib.rs  metadata.rs  path.rs  pending.rs  tests.rs  tree.rs  worker.rs
src/inotify/: sys.rs
